--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -702,7 +702,7 @@ services:
         condition: service_healthy
         required: false
       redis:
-        condition: service_started
+        condition: service_healthy
     volumes:
       # Mount the storage directory to the container, for storing user files.
       - ./volumes/app/storage:/app/api/storage
@@ -741,7 +741,7 @@ services:
         condition: service_healthy
         required: false
       redis:
-        condition: service_started
+        condition: service_healthy
     volumes:
       # Mount the storage directory to the container, for storing user files.
       - ./volumes/app/storage:/app/api/storage
@@ -775,7 +775,7 @@ services:
         condition: service_healthy
         required: false
       redis:
-        condition: service_started
+        condition: service_healthy
     networks:
       - ssrf_proxy_network
       - default
