--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -708,7 +708,7 @@ services:
         condition: service_healthy
         required: false
       redis:
-        condition: service_healthy
+        condition: service_started
     volumes:
       # Mount the storage directory to the container, for storing user files.
       - ./volumes/app/storage:/app/api/storage
@@ -747,7 +747,7 @@ services:
         condition: service_healthy
         required: false
       redis:
-        condition: service_healthy
+        condition: service_started
     volumes:
       # Mount the storage directory to the container, for storing user files.
       - ./volumes/app/storage:/app/api/storage
@@ -781,7 +781,7 @@ services:
         condition: service_healthy
         required: false
       redis:
-        condition: service_healthy
+        condition: service_started
     networks:
       - ssrf_proxy_network
       - default
