add env to docker file

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -655,6 +655,8 @@ x-shared-env: &shared-api-worker-env
   ANNOTATION_IMPORT_RATE_LIMIT_PER_HOUR: ${ANNOTATION_IMPORT_RATE_LIMIT_PER_HOUR:-20}
   ANNOTATION_IMPORT_MAX_CONCURRENT: ${ANNOTATION_IMPORT_MAX_CONCURRENT:-5}
   AMPLITUDE_API_KEY: ${AMPLITUDE_API_KEY:-}
+  ENABLE_FIELD_ENCRYPTION: ${ENABLE_FIELD_ENCRYPTION:-False}
+  ENCRYPTION_KEY: ${ENCRYPTION_KEY:-}
 
 services:
   # Init container to fix permissions
