--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1461,3 +1461,8 @@ ANNOTATION_IMPORT_MAX_CONCURRENT=5
 
 # The API key of amplitude
 AMPLITUDE_API_KEY=
+
+#Enable encryption for sensitive fields (password, verification code) during transmission. ""When enabled, the frontend encrypts sensitive fields using AES-256-CBC before sending to backend.
+ENABLE_FIELD_ENCRYPTION=False
+#AES encryption key for sensitive field encryption. Must be a 32-byte key encoded in base64. Generate using: "'`python3 -c "import secrets, base64; print(base64.b64encode(secrets.token_bytes(32)).decode())"`
+ENCRYPTION_KEY=
