add web env param

--- a/web/.env.example
+++ b/web/.env.example
@@ -73,3 +73,8 @@ NEXT_PUBLIC_MAX_TREE_DEPTH=50
 
 # The API key of amplitude
 NEXT_PUBLIC_AMPLITUDE_API_KEY=
+
+#Enable encryption for sensitive fields (password, verification code) during transmission. ""When enabled, the frontend encrypts sensitive fields using AES-256-CBC before sending to backend.
+NEXT_PUBLIC_ENABLE_FIELD_ENCRYPTION=false
+#AES encryption key for sensitive field encryption. Must be a 32-byte key encoded in base64. Generate using: "'`python3 -c "import secrets, base64; print(base64.b64encode(secrets.token_bytes(32)).decode())"` should be same with backend
+NEXT_PUBLIC_ENCRYPTION_KEY=
