--- a/docker/docker-compose-template.yaml
+++ b/docker/docker-compose-template.yaml
@@ -157,6 +157,8 @@ services:
       ENABLE_WEBSITE_JINAREADER: ${ENABLE_WEBSITE_JINAREADER:-true}
       ENABLE_WEBSITE_FIRECRAWL: ${ENABLE_WEBSITE_FIRECRAWL:-true}
       ENABLE_WEBSITE_WATERCRAWL: ${ENABLE_WEBSITE_WATERCRAWL:-true}
+      ENABLE_FIELD_ENCRYPTION: ${ENABLE_FIELD_ENCRYPTION:-False}
+      ENCRYPTION_KEY: ${ENCRYPTION_KEY:-}
 
   # The PostgreSQL database.
   db_postgres:
