--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -657,8 +657,6 @@ x-shared-env: &shared-api-worker-env
   AMPLITUDE_API_KEY: ${AMPLITUDE_API_KEY:-}
   ENABLE_FIELD_ENCRYPTION: ${ENABLE_FIELD_ENCRYPTION:-False}
   ENCRYPTION_KEY: ${ENCRYPTION_KEY:-}
-  ENABLE_FIELD_ENCRYPTION: ${ENABLE_FIELD_ENCRYPTION:-False}
-  ENCRYPTION_KEY: ${ENCRYPTION_KEY:-}
 
 services:
   # Init container to fix permissions
@@ -818,8 +816,8 @@ services:
       ENABLE_WEBSITE_JINAREADER: ${ENABLE_WEBSITE_JINAREADER:-true}
       ENABLE_WEBSITE_FIRECRAWL: ${ENABLE_WEBSITE_FIRECRAWL:-true}
       ENABLE_WEBSITE_WATERCRAWL: ${ENABLE_WEBSITE_WATERCRAWL:-true}
-      ENABLE_FIELD_ENCRYPTION: ${ENABLE_FIELD_ENCRYPTION:-False}
-      ENCRYPTION_KEY: ${ENCRYPTION_KEY:-}
+      NEXT_PUBLIC_AMPLITUDE_API_KEY: ${ENABLE_FIELD_ENCRYPTION:-False}
+      NEXT_PUBLIC_ENCRYPTION_KEY: ${ENCRYPTION_KEY:-}
 
   # The PostgreSQL database.
   db_postgres:
