refine pg-mode connection on create-new-project, fix lint check fail

--- a/docker/middleware.env.example
+++ b/docker/middleware.env.example
@@ -227,8 +227,8 @@ ALIYUN_SLS_ENDPOINT=
 ALIYUN_SLS_REGION=
 # Aliyun SLS Project Name
 ALIYUN_SLS_PROJECT_NAME=
-# Aliyun SLS Logstore TTL (default: 90)
-ALIYUN_SLS_LOGSTORE_TTL=90
+# Aliyun SLS Logstore TTL (default: 365 days， 3650 for permanent storage)
+ALIYUN_SLS_LOGSTORE_TTL=365
 # Enable dual-write to both LogStore and SQL database (default: true)
 LOGSTORE_DUAL_WRITE_ENABLED=true
 # Enable dual-read fallback to SQL database when LogStore returns no results (default: true)
