fix: update test command in web-tests.yml for improved compatibility
- Change test command to use 'pnpm exec jest' for better execution of tests
- Maintain coverage generation while ensuring compatibility with no test scenarios

--- a/.github/workflows/web-tests.yml
+++ b/.github/workflows/web-tests.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Run tests
         if: steps.changed-files.outputs.any_changed == 'true'
         working-directory: ./web
-        run: pnpm test -- --coverage
+        run: pnpm exec jest --coverage --passWithNoTests
 
       - name: Coverage Summary
         if: steps.changed-files.outputs.any_changed == 'true'
