--- a/web/package.json
+++ b/web/package.json
@@ -201,6 +201,7 @@
     "globals": "^15.15.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "jsdom-testing-mocks": "^1.16.0",
     "knip": "^5.66.1",
     "lint-staged": "^15.5.2",
     "lodash": "^4.17.21",
